[project]
name = "gp-hyperparameter"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "dash (>=2.18.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "gp_hyperparameter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
